# final-project-windwizards

./: Draft.docx  README.md  main.py  pyproject.toml
examples/: main.py
src/: Airfoil.py  Blade.py  BladeElement.py  BladeElementTheory.py  MomentumTheory.py  OperationalCharacteristics.py  OperationalCondition.py  OperationalConditions.py  PerformanceAnalyzer.py  Turbine.py  __init__.py  data.py  data2.py  plot_data.py
tests/: test_airfoil.py  test_blade.py  test_blade_element.py  test_blade_element_theory.py  test_init.py  test_operational_characteristics.py  test_operational_condition.py  test_performance_analyzer.py  test_solidity.py
