# Configuration for building and packaging the BEM solver
# For more details see: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wind-turbine-bem"
version = "0.0.1"
description = "A Blade Element Momentum (BEM) model for wind turbine aerodynamic performance analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lara Schmidt, Leif Stolte, Francois de Weck", email = "s250243@dtu.dk" }
]
keywords = ["wind", "turbine", "aerodynamics", "BEM", "blade-element-momentum"]

dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bem_solver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[project.urls]
Repository = "https://github.com/DTUWindEducation/final-project-windwizards"
Documentation = "https://github.com/DTUWindEducation/final-project-windwizards/blob/main/README.md"


