# Configuration for building and packaging the BEM solver
# For more details see: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wind-turbine-bem"
version = "0.0.1"
description = "A Blade Element Momentum (BEM) model for wind turbine aerodynamic performance analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lara Schmidt, Leif Stolte, Francois de Weck", email = "s250243@dtu.dk" }
]
keywords = ["wind", "turbine", "aerodynamics", "BEM", "blade-element-momentum"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.20",
    "scipy>=1.7",
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/final-project-windwizards"
Documentation = "https://github.com/DTUWindEducation/final-project-windwizards/blob/main/README.md"
"Bug Tracker" = "https://github.com/DTUWindEducation/final-project-windwizards/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "tests/**/*.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
    "**/.pytest_cache",
    "**/.coverage",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[project.scripts]
wind-turbine-bem = "src.PerformanceAnalyzer:main"


